// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/ExternalApp default 1`] = `
<div
  style="height: 100%;"
>
  <!---->
</div>
`;

exports[`storyshots components/visualize/ExternalApp with parts in settings 1`] = `
<div
  style="height: 100%;"
>
  <iframe
    id="1"
    src="https://locokit.io"
    title="My ExternalApp's block"
    type="ExternalApp"
  />
</div>
`;
